[package]
name = "sprinkle"
version = "0.1.0"
authors = ["Thog <contact@thog.eu>", "XorTroll"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/XorTroll/sprinkle/"
repository = "https://github.com/XorTroll/sprinkle/"
edition = "2018"
description = "Nintendo file format manipulation library and tools."

[[bin]]
name = "sprinkle"
path = "src/bin/main.rs"

[dependencies]
elf = "0.0.10"
byteorder = "1"
lz4 = "1.23.1"
clap = { version = "2", optional = true }
structopt = { version = "0.2", optional = true }
sha2 = "0.8.0"
scroll = { version = "0.9.0", optional = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
cargo_metadata = { version = "0.9.1", optional = true }
semver = {version = "0.9.0", optional = true }
goblin = { version = "0.0.17", optional = true }
rust-ini = "0.13"
failure = "0.1"
dirs = "1.0"
block-modes = "0.2"
aes = "0.3"
num-traits = "0.2"
derive_more = "0.13"
cmac = "0.2.0"
blz-nx = "1.0.1"
bit_field = "0.10.0"
cargo-toml2 = { version = "1.3.2", optional = true }
bincode = "1.1.4"
yasna = { version = "0.3", features = ["num-bigint"] }
pem = "0.6"
rand = "0.7"
rsa = { git = "https://github.com/RustCrypto/RSA", rev = "11500ed" }
hex = "0.3"

[features]
default = ["structopt", "cargo_metadata", "semver", "scroll", "goblin", "clap", "cargo-toml2"]
